My sixth commit. I made the app totally offline. Removed some features like the firebase and work manager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -514,5 +514,6 @@
     <string name="search_list">Search</string>
     <string name="notice">You need 100 points to unlock Catholic Faith quiz</string>
     <string name="rate_me">Rate me</string>
+    <string name="know_your_faith">Know your faith</string>
 
 </resources>
